--- a/src/pages/SignUpPage/styles.module.css
+++ b/src/pages/SignUpPage/styles.module.css
@@ -10,20 +10,20 @@
 .right {
   position: relative;
   width: 50%;
-  height: 100%;
+  min-height: 100vh;
 }
 
 .filterBg {
   position: absolute;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background: linear-gradient(167.9deg, #fc66a4 0%, #993cff 98.7%);
   opacity: 0.8;
 }
 
 .bg {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .right {
@@ -160,7 +160,18 @@
   cursor: pointer;
 }
 
+.daysDiv {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 2rem;
+  flex-wrap: wrap;
+}
+
 .dayChecked {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 50px;
   background: #f097ce;
   font-size: 1.25rem;
@@ -170,9 +181,13 @@
   border: 1px solid #cccccc;
   padding: 1rem;
   cursor: pointer;
+  margin: 0rem 0.5rem 0.5rem 0.5rem;
 }
 
 .dayUnchecked {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 50px;
   font-size: 1.25rem;
   font-weight: 700;
@@ -182,12 +197,13 @@
   padding: 1rem;
   cursor: pointer;
   background-color: #e5e5e5;
+  margin: 0rem 0.5rem;
 }
 
 .turnsDiv {
   width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   margin-bottom: 2rem;
   flex-wrap: wrap;
 }
@@ -202,6 +218,7 @@
   box-sizing: content-box;
   border: 1px solid transparent;
   margin-bottom: 0.5rem;
+  margin: 0rem 0.5rem 0.5rem 0.5rem;
 }
 
 .turnUnchecked {
@@ -214,7 +231,7 @@
   border: 1px solid #cccccc;
   box-sizing: content-box;
   background-color: #e5e5e5;
-  margin-bottom: 0.5rem;
+  margin: 0rem 0.5rem 0.5rem 0.5rem;
 }
 
 .price {
@@ -231,15 +248,32 @@
 }
 
 @media (max-width: 800px) {
+  .loginPageContainer {
+    height: auto;
+    overflow: auto;
+  }
+  .filterBg {
+    height: 100%;
+  }
+
+  .bg {
+    height: 100%;
+  }
+
   .left {
     width: 100%;
+    height: 100%;
     position: absolute;
     z-index: 1;
   }
   .right {
     width: 100%;
-    height: 100vh;
-    z-index: 2;
+    height: 100%;
+    padding: 1rem;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   .rightContent {
@@ -247,9 +281,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 80%;
-    min-height: 600px;
-    z-index: 2;
+    z-index: 3;
   }
 
   .title {
@@ -259,6 +291,7 @@
 
   .mobileSignUp {
     background-color: #fff;
+    width: 100%;
     padding: 4rem 2rem;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.17);
     border-radius: 5px;
